fix proxy
